Revision history for Perl extension Perl-MinimumVersion

1.31 Tue  4 Dec 2012
    - sort $subref requires perl 5.6 (Alexandr Ciornii)

1.30 Wed 28 Nov 2012
    - 'each % { $foo }' incorrectly required perl 5.14 (RT#81505)
    - 02_main.t fails in rare cases (RT#81487)

1.29 Tue 27 Nov 2012
	- "Use of uninitialized value in null operation" fix.
	- Adding test for "utf8::is_utf" 5.8.1 special case
	- Recognize all versions in "use feature" bundle (Alexandr Ciornii)
	- Support regexes (Alexandr Ciornii)
	- detect changes in each/keys/values in 5.12 and 5.14 (Yasutaka ATARASHI, Alexandr Ciornii)
	- 2-arg binmode (Alexandr Ciornii)
	- postfix when (Alexandr Ciornii)
	- exists(&sub) (Kevin Ryde, Alexandr Ciornii)
	- _bugfix_magic_errno will return element (Alexandr Ciornii)
	- add 'encoding' to 5.8 pragmas (Alexandr Ciornii)
	- private methods _set_checks2skip and _set_collect_all_reasons for
	  Perl::Critic::Policy::Compatibility::PerlMinimumVersionAndWhy (Alexandr Ciornii)
	- temp file with open requires 5.8 (Alexandr Ciornii)

1.28 Wed  2 Mar 2011
	- The ->isa in the 5.10 operator and magic variable tests were
	  back the front, breaking both. Fixed (ADAMK)
	- Magic variable rules now check using ->symbol method instead of
	  ->content so that $+{foo} are correctly treated like %+ (ADAMK)
	- Removed -w from tests to allow testing with Tainting on (ADAMK)

1.27 Sat 26 Feb 2011
	- Updating to Module::Install::DSL 1.00
	- Updating copyright year
	- Fix detection of binary numbers (Alexandr Ciornii)
	- Add check for variables added in 5.5 (Alexandr Ciornii)
	- Correct detection of different cases of '...' (Alexandr Ciornii)
	- Detection of bareword that ends with double colon (Alexandr Ciornii)

1.26 Thu 22 Jul 2010
	- Detect "package NAME VERSION" in 5.12. (Steffen Mueller)
	- Detect "..." (yada yada yada) in 5.12. (Steffen Mueller)
	- Detect "use feature ':5.12';" in 5.12. (Steffen Mueller)

1.25 Sun 11 Apr 2010